--- a/index.html
+++ b/index.html
@@ -1,159 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Data Story</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Fertility in Europe – Scrollytelling</title>
+  <link rel="stylesheet" href="style.css">
 
-        /* This container stacks the charts and makes them sticky */
-        #sticky-map-container {
-            position: sticky;
-            top: 0;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f5f5f5;
-        }
-
-        /* Styles for the charts themselves */
-        .chart {
-            width: 600px;
-            height: 719px;
-            position: absolute; /* Allows them to stack on top of each other */
-            opacity: 0; /* They are invisible by default */
-            transition: opacity 0.5s ease-in-out; /* This creates the smooth fade effect */
-        }
-        
-        .chart.active-chart {
-            opacity: 1; /* This class makes a chart visible */
-        }
-
-        .chart iframe {
-            width: 100%;
-            height: 100%;
-        }
-
-        /* Container for the scrolling text */
-        #scrolling-text-container {
-            background-color: #fff;
-            position: relative;
-            padding: 50px 20px;
-            box-sizing: border-box;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .story-text-section {
-            height: 80vh;
-            padding-top: 20px;
-        }
-    </style>
+  <!-- Scrollama Library -->
+  <script src="https://unpkg.com/scrollama"></script>
 </head>
 <body>
 
-    <div id="sticky-map-container">
-        <div id="map-1" class="chart">
-            <iframe title="Crude Birth Rate (per 1000 people) across europe" aria-label="Choropleth map" id="datawrapper-chart-D5NBu" src="https://datawrapper.dwcdn.net/D5NBu/2/" scrolling="no" frameborder="0" style="border: none;" width="600" height="719" data-external="1"></iframe>
-        </div>
-        <div id="map-2" class="chart">
-            <iframe title="Crude Birth Rate (per 1000 people) across europe (Copy)" aria-label="Choropleth map" id="datawrapper-chart-YG6Lu" src="https://datawrapper.dwcdn.net/YG6Lu/2/" scrolling="no" frameborder="0" style="border: none;" width="600" height="719" data-external="1"></iframe>
-        </div>
-        <div id="map-3" class="chart">
-            <iframe title="Crude Birth Rate (per 1000 people) across europe (Copy)" aria-label="Choropleth map" id="datawrapper-chart-YG6Lu" src="https://datawrapper.dwcdn.net/YG6Lu/2/" scrolling="no" frameborder="0" style="border: none;" width="600" height="719" data-external="1"></iframe>
-        </div>
+  <section id="scrolly">
+    <!-- Sticky graphic area with changing map -->
+    <div class="graphic">
+      <iframe id="map-frame"
+        src="https://datawrapper.dwcdn.net/Kpfzc/2/"
+        width="686"
+        height="600"
+        frameborder="0"
+        scrolling="no"
+        style="border:none;">
+      </iframe>
     </div>
 
-    <div id="scrolling-text-container">
-        <div id="text-1" class="story-text-section">
-            <p><b>With birth rates collapsing, who's actually having Europe's babies?</b></p>
-            <p><b>The Immigration Birth Dividend: Foreign Mothers Keep Europe Alive</b></p>
-            <p>This map shows who's having babies. Dark green = more births per 1000 people. But the real story is in the composition: immigrant mothers vs. native mothers.</p>
-        </div>
-        <div id="text-2" class="story-text-section">
-            <p>The shocking reality: In 24 out of 32 countries, immigrant mothers contribute MORE births than their population share. Luxembourg: 51% immigrants → 67% of births.</p>
-            <div class="visual-container">
-                <div class="bar-chart-container">
-                    <p><b>Immigrant Births as % of Total</b></p>
-                    <div class="custom-bar-container"><div class="custom-bar-fill bar-luxembourg"></div></div>
-                </div>
-            </div>
-            <p>Switzerland: 31% immigrants → 45% of births. They're not replacing Europeans. They're saving European demographics.</p>
-        </div>
-        <div id="text-3" class="story-text-section">
-            <p><b>Switzerland</b><br><small>Crude birth rate: 9.0 per 1,000</small></p>
-            <table style="margin-top:6px; border-collapse: collapse; width: 100%; padding-right: 10px;">
-              <tr>
-                <td style="padding-right:10px; width: 40%;">Immigrant Mothers</td>
-                <td style="width: 60%; padding-right:10px;">
-                  <div style="height:20px; display:flex; align-items:center; background:#ececec; position: relative; padding-right:10px;">
-                    <div style="background:#828a52; height:100%; width: 45%;"></div>
-                    <span style="position:absolute; left: calc(45% + 4px); font-size:0.9em; font-weight:bold; color:#828a52;">45%</span>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td style="padding-top:3px; padding-right:10px;">Native Mothers</td>
-                <td style="width: 60%; padding-right:10px;">
-                  <div style="height:20px; display:flex; align-items:center; background:#ececec; position: relative; padding-right:10px;">
-                    <div style="background:#414d38; height:100%; width: 55%;"></div>
-                    <span style="position:absolute; left: calc(55% + 4px); font-size:0.9em; font-weight:bold; color:#414d38;">55%</span>
-                  </div>
-                  </div>
-                </td>
-              </tr>
-            </table>
-            <p>That’s a difference of <strong>10.0</strong>%-points</p>
-            <p>Countries embracing immigrant births: ↗ Higher birth rates, demographic stability. Countries with low immigrant births: ↘ Lowest birth rates in Europe. Poland: 2.6% immigrants, 7% immigrant births. Result: 7.4 births per 1000 (crisis level).</p>
-        </div>
+    <!-- Scroll steps with text and data-map attributes -->
+    <div class="steps">
+      <div class="step is-active"
+           data-map="https://datawrapper.dwcdn.net/Kpfzc/2/">
+        <h2>Fertility Across Europe</h2>
+        <p>This map shows the latest total fertility rate (TFR) across European countries. 
+           Note how most countries have rates below the replacement level of 2.1 live births per woman.</p>
+      </div>
+
+      <div class="step"
+           data-map="https://datawrapper.dwcdn.net/2azAd/4/">
+        <h2>Critical TFR Countries</h2>
+        <p>Here we highlight countries with particularly low fertility — often below 1.5. 
+           Such levels can lead to rapid population aging and decline without immigration.</p>
+      </div>
+
+      <div class="step"
+           data-map="https://datawrapper.dwcdn.net/BzPGR/1/">
+        <h2>Lowest TFR in Europe</h2>
+        <p>This final view focuses on the countries with the lowest fertility, some dropping close to or below 1.2. 
+           These cases raise urgent policy and demographic challenges.</p>
+      </div>
     </div>
+  </section>
 
-    <script>
-        const charts = document.querySelectorAll('.chart');
-        const storySections = document.querySelectorAll('.story-text-section');
-
-        function showChart(index) {
-            charts.forEach((chart, i) => {
-                if (i === index) {
-                    chart.classList.add('active-chart');
-                } else {
-                    chart.classList.remove('active-chart');
-                }
-            });
-        }
-
-        const observerOptions = {
-            root: null,
-            rootMargin: '0px',
-            threshold: 0.5
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    const index = Array.from(storySections).indexOf(entry.target);
-                    showChart(index);
-                }
-            });
-        }, observerOptions);
-
-        storySections.forEach(section => {
-            observer.observe(section);
-        });
-
-        // Show the first chart when the page first loads
-        showChart(0);
-    </script>
+  <script src="script.js"></script>
 </body>
 </html>
